inst_LIBRARIES = libsupc++.a
instdir = $(top_srcdir)/lib

libsupc___a_SOURCES = eh_alloc.cc\
                      eh_aux_runtime.cc\
                      eh_call.cc\
                      eh_catch.cc\
                      eh_globals.cc\
                      eh_personality.cc\
                      eh_term_handler.cc\
                      eh_terminate.cc\
                      eh_throw.cc\
                      eh_type.cc\
                      eh_unex_handler.cc\
                      pure.cc\
                      tinfo.cc\
                      vec.cc\
                      vterminate.cc
