inst_LIBRARIES = libstdc++.a
instdir = $(top_srcdir)/lib

libstdc___a_SOURCES = algorithm.cpp\
                      associative_base.cpp\
                      bitset.cpp\
                      char_traits.cpp\
                      complex.cpp\
                      del_op.cpp\
                      del_opnt.cpp\
                      del_opv.cpp\
                      deque.cpp\
                      exception.cpp\
                      fstream.cpp\
                      func_exception.cpp\
                      iomanip.cpp\
                      ios.cpp\
                      iostream.cpp\
                      istream.cpp\
                      iterator.cpp\
                      limits.cpp\
                      list.cpp\
                      locale.cpp\
                      map.cpp\
                      new_handler.cpp\
                      new_op.cpp\
                      new_opnt.cpp\
                      new_opv.cpp\
                      new_opvnt.cpp\
                      numeric.cpp\
                      ostream.cpp\
                      queue.cpp\
                      set.cpp\
                      sstream.cpp\
                      stack.cpp\
                      stdexcept.cpp\
                      streambuf.cpp\
                      string.cpp\
                      utility.cpp\
                      valarray.cpp\
                      vector.cpp
